--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
 </head>
 <body>
     <main>
-        <section id="logim">
+        <section id="login">
             <div id="imagem">
 
             </div>
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo. Faça o login para acessar a sua página.</p>
-                <form action="login.php" method="post"></form>
+                <form action="login.php" method="post">
+                    <p><input type="text" name="user" id="iduser"></p>
+                    <p><input type="password" name="senha" id="idsenha"></p>
+                </form>
             </div>
         </section>
     </main>
