--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                         <input type="password" name="senha" id="idsenha" placeholder="Sua senha" autocomplete="current-password" required maxlength="30" minlength="8">                      
                     </p>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">Esqueci a senha.</a>
+                    <a href="esqueci.html" class="botao">Esqueci a senha.</a>
                 </form>
             </div>
         </section>
     </main>
 </body>
-</ht
+</html>
